--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import-normalize;
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,7 +12,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-#root {
-  text-align: center;
-  flex-direction: column;
+img {
+  display: block;
+}
+:root {
 }
