--- a/src/components/Transaction/Transaction.module.css
+++ b/src/components/Transaction/Transaction.module.css
@@ -1,2 +1,33 @@
 .transaction_history {
+  width: 300px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 6px;
+  border-spacing: 0;
+  box-shadow: 7px 7px 13px 0px rgba(0, 0, 0, 0.38);
+  overflow: hidden;
+}
+thead tr {
+  background-color: rgb(36, 196, 196);
+  color: #fff;
+}
+
+th,
+td {
+  padding: 10px;
+}
+
+th:not(:last-child),
+td:not(:last-child) {
+  border-right: 1px solid rgb(216, 215, 215);
+}
+tbody tr {
+  font-size: 14px;
+  color: rgb(143, 139, 139);
+}
+tr:nth-child(even) {
+  background-color: rgb(245, 238, 238);
+}
+
+.type {
+  text-transform: capitalize;
 }
